font size theming + col

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,18 @@
   <title>Welcome Tailwind Hero!</title>
 </head>
 
-<body>
-  <h1>Tailwind Hero!</h1>
+<body class="bg-primary">
+
+  <div class="flex items-center h-screen">
+      <div class="w-1/2 pl-10">
+        <h1 class="text-white font-primary font-bold text-h1">We-Code Digital Studio</h1>
+        <h5 class="text-white font-secondary font-regular text-h5">Software Development</h5>
+      </div>
+      <div class="w-1/2">
+        <p class="text-white">lorem ipsum</p>
+      </div>
+  </div>
+
 </body>
 
 </html>
