creato container in basso a dx

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
   <title>Welcome Tailwind Hero!</title>
 </head>
 
-<body class="bg-primary">
+<body class="bg-gray-900">
 
-  <div class="flex items-center h-screen">
-      <div class="w-1/2 pl-10">
-        <h1 class="text-white font-primary font-bold text-h1">We-Code Digital Studio</h1>
-        <h5 class="text-white font-secondary font-regular text-h5">Software Development</h5>
-      </div>
-      <div class="w-1/2">
-        <p class="text-white">lorem ipsum</p>
-      </div>
+  <div class="block md:flex align-stretch">
+    <div class="py-24 px-8f flex flex-col md:flex-1 md:h-screen md:justify-center">
+      <h1 class="text-white font-primary font-bold text-h1 text-center md:text-left">We-Code Digital Studio</h1>
+      <h5 class="text-white font-secondary font-regular text-h5 text-center md:text-left">Software Development</h5>
+    </div>
+    <div class="flex flex-1 items-end justify-end md:h-screen">
+      <div class="bg-teal-200 ball"></div>
+    </div>
   </div>
 
 </body>
