--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,25 @@
 <body class="bg-gray-900">
 
   <div class="block md:flex align-stretch">
-    <div class="py-24 px-8f flex flex-col md:flex-1 md:h-screen md:justify-center">
+    <div class="py-24 px-8f flex flex-col md:flex-1 md:h-screen md:justify-center pl-20">
       <h1 class="text-white font-primary font-bold text-h1 text-center md:text-left">We-Code Digital Studio</h1>
-      <h5 class="text-white font-secondary font-regular text-h5 text-center md:text-left">Software Development</h5>
+      <h5 class="text-white font-secondary font-regular text-h5 text-center md:text-left -mt-3">Software Development</h5>
     </div>
     <div class="flex flex-1 items-end justify-end md:h-screen">
-      <div class="bg-teal-200 ball"></div>
+      <div class="bg-teal-200 ball">
+        <h5 class="font-secondary text-h5 absolute text-gray-900 font-bold our--main--skills">Our main skills</h3>
+        <div class="bg-white rounded-lg absolute shadow-lg logos px-4 py-2">
+          <div class="inline-block pt-2">
+            <img class="w-16" src="./img/dotnet-core.svg">
+          </div>
+          <div class="inline-block px-4 pt-2">
+            <img class="w-10" src="./img/angular.svg">
+          </div>
+          <div class="inline-block pt-2">
+            <img class="w-16" src="./img/tailwind-css.svg">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
